# HyperBerry

./: .buildinfo  .clang-format  .clang-tidy  .clangd  .gitgnore  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  api.html  architecture.html  genindex.html  index.html  justfile  memory.html  objects.inv  search.html  searchindex.js
.doctrees/: api.doctree  architecture.doctree  environment.pickle  index.doctree  memory.doctree
.github/actions/run-qemu-integration/: action.yml  run_qemu_integration.py
.github/actions/setup-ci/: action.yml
.github/workflows/: docs.yml  integration.yml  toolchain-image.yml  unit.yml
_sources/: api.rst.txt  architecture.rst.txt  memory.rst.txt
arch/aarch64/: boot.S  exceptions.S  vcpu.S  vectors.S
arch/aarch64/fvp/: boot.S
arch/aarch64/qemu/: boot.S
arch/aarch64/rpi5/: boot.S
arch/aarch64/scripts/rpi5/: linker.ld
boot/: config.txt  guest-base.dtsi  guest-fvp.dts  guest-qemu.dts  guest.dts  host-fvp.dts
boot/dtb/: guest-qemu.dtb  guest-rpi5.dtb
boot/dts/: guest-rpi5.dts
boot/rpi5/: bcm2712-rpi-5-b.dtb  config.txt
bsp/: bsp.h  fvp.h  qemu.h  rpi5.h
ci/: Dockerfile
cmake/: aarch64-linux-toolchain.cmake  aarch64-toolchain.cmake
core/: CMakeLists.txt  main.cpp
core/bootpkg/: CMakeLists.txt  bootpkg.cpp  bootpkg.h
core/buddyAlloc/: CMakeLists.txt
core/dtb/: CMakeLists.txt  dtb.cpp  dtb.h
core/exceptions/: CMakeLists.txt  exceptions.cpp  exceptions.h
core/exceptions/hvc/: CMakeLists.txt  hvc.cpp  hvc.h
core/exceptions/smccc/: smccc.h
core/mm/: CMakeLists.txt
core/mm/buddy/: CMakeLists.txt  buddy.cpp  buddy.h
core/mm/guestMmu/: guestMmu.cpp
core/mm/heap/: CMakeLists.txt  heap.cpp  heap.h
core/mm/hostMmu/: hostMmu.cpp
core/mm/mmu/: CMakeLists.txt  mmu.cpp  mmu.h
core/mm/mmu/guestMmu/: CMakeLists.txt  guestMmu.cpp  guestMmu.h
core/mm/mmu/hostMmu/: CMakeLists.txt  hostMmu.cpp  hostMmu.h
core/mm/pageTable/: CMakeLists.txt  pageTable.cpp  pageTable.h
core/mm/pmm/: CMakeLists.txt  pmm.cpp  pmm.h
core/vcpu/: CMakeLists.txt  vcpu.cpp  vcpu.h
core/vm/: CMakeLists.txt  vm.cpp  vm.h
docs/: GUEST_BOOT_PACKAGE.md  TESTING.md  TODO.md  VISION.md  exception_integration_tests_plan.md
docs/sphinx/: Doxyfile  api.rst  architecture.rst  conf.py  groups.dox  index.rst  memory.rst
drivers/: CMakeLists.txt
drivers/gic/: CMakeLists.txt  gic.cpp  gic.h
drivers/timer/: CMakeLists.txt  timer.cpp  timer.h
drivers/uart/: CMakeLists.txt  uart.cpp  uart.h
lib/: CMakeList.txt  CMakeLists.txt  array.h  registerDump.h
lib/array/: array.h
lib/memory/: shared_ptr.h  unique_ptr.h
lib/panic/: CMakeLists.txt  panic.cpp  panic.h
lib/registerDump/: registerDump.h
lib/strings/: CMakeLists.txt  strings.cpp  strings.h
lib/utility/: utility.h
linker/fvp/: linker.ld
linker/qemu/: linker.ld
linker/rpi5/: linker.ld
platform/: platform_def.h  qemu.h  rpi5.h
tests/integration/: suite.cpp  suite.h
tests/integration/bootpkg/: CMakeLists.txt  test_bootpkg.cpp
tests/integration/buddy/: CMakeLists.txt  test_buddy.cpp  test_pmm.cpp
tests/integration/exceptions/: CMakeLists.txt  exceptionState.h  test_exceptions.cpp  test_vectors.S
tests/integration/gic/: CMakeLists.txt  guest_payload.S  test_gic.cpp  test_vectors.S
tests/integration/guestMmu/: CMakeLists.txt  test_guestMmu.cpp
tests/integration/mmu/: CMakeLists.txt  test_mmu.cpp
tests/integration/tap/: tap.h
tests/integration/timer/: CMakeLists.txt  test_timer.cpp  test_vectors.S
tests/integration/uart/: CMakeLists.txt  test_uart.cpp
tests/integration/uart_hw/: test_uart_hw.cpp
tests/integration/vcpu/: CMakeLists.txt  test_vcpu.cpp  test_vectors.S
tests/unit/: CMakeLists.txt
tests/unit/array/: test_array.cpp
tests/unit/bootpkg/: test_bootpkg.cpp
tests/unit/buddy/: test_buddy.cpp
tests/unit/dtb/: test_dtb.cpp
tests/unit/exceptions/: test_exceptions.cpp  test_hvc.cpp
tests/unit/gic/: test_gic.cpp
tests/unit/guestMmu/: test_guestMmu.cpp
tests/unit/heap/: test_heap.cpp
tests/unit/hostMmu/: test_hostMmu.cpp
tests/unit/memory/: test_shared_ptr.cpp  test_unique_ptr.cpp
tests/unit/mmu/: test_mmu.cpp
tests/unit/pageTable/: test_pageTable.cpp
tests/unit/strings/: test_strings.cpp
tests/unit/stubs/: linker_stubs.cpp  uart_stub.cpp
tests/unit/uart/: test_uart_format.cpp
tests/unit/utility/: test_utility.cpp
tests/unit/vcpu/: test_vcpu.cpp
tests/unit/vm/: test_vm.cpp
tools/mkguestpkg/: Cargo.toml
tools/mkguestpkg/src/: main.rs
